--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -1,32 +1,60 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCYearOfPassing</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1NameValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentType</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3NameValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCRegNumber</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentAmount</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3Marks3Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCModeOfStudy</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2Marks1Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2NameValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3Percetage3Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideEntranceExamValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment3</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCModeOfStudy</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCYearOfPassing</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment1</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCYoPStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersOccupationStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianAddr3Step2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressCityInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressStateInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateEntityValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateNationalityInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersOccupationStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGuardianContactNumberStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateCommunityInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateCitizenShipInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersAnnualIncomeStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCPercentageStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePlaceOfBirthStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickSubmitButtonStep4</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment5</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCSchoolName</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2Percetage2Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment4</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCPercentageValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1Percetage1Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1Marks1Value</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideCourse</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCSchoolName</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCPercentageValue</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCRegNumber</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickNextButtonStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressCountryInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateReligionInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadFirstName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersNameStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCRegNumberStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCModeOfStudyStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianNameStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianAddr1Step2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGenderValueInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadMobileNumber</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCSchoolNameStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateCasteInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCBoardStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateCourseStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersEmailStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentType</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePlaceOfIssueInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersMobileStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateBloodGroupInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDoBStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentAmount</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersQualificationStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGrdnAddrPincodeStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePassportNumberInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCSchoolNameStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGuardianRelationStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersMobileStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianAddr2Step2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateExpiryDateInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersEmailStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersQualificationStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCYoPStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersNameStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDomicileInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadEmailAddress</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDateOfIssueInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCBoardStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCModeOfStudyStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateAadhaarNumberInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadDetailsSuccessfulSumbission</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCRegNumberStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCPercentageStep3</td></tr>
 </table>
