--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -4,11 +4,8 @@
 <tr><td>User has entered Full Name successfully.</td></tr>
 <tr><td>User has entered Mobile successfully.</td></tr>
 <tr><td>User has entered Email Address successfully.</td></tr>
+<tr><td>User has entered Entity value successfully.</td></tr>
 <tr><td>User has clicked Submit button successfully.</td></tr>
-<tr><td>Provided First Name matches the value stored in database.</td></tr>
-<tr><td>Provided Mobile Number matches the value stored in database.</td></tr>
-<tr><td>Provided Email Address matches the value stored in database.</td></tr>
-<tr><td>Provided Lead details are submitted successfully.</td></tr>
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
 <tr><td>User has provided Date of Birth successfully.</td></tr>
@@ -34,33 +31,7 @@
 <tr><td>User has entered City value successfully.</td></tr>
 <tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
-<tr><td>User has clicked Same Address checkbox successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>Provided DOB matches the value stored in database.</td></tr>
-<tr><td>Provided Place Of Birth matches the value stored in database.</td></tr>
-<tr><td>Provided Gender matches the value stored in database.</td></tr>
-<tr><td>Provided Nationality matches the value stored in database.</td></tr>
-<tr><td>Provided Aadhaar Number matches the value stored in database.</td></tr>
-<tr><td>Provided Passport Number matches the value stored in database.</td></tr>
-<tr><td>Provided Place Of Issue matches the value stored in database.</td></tr>
-<tr><td>Provided Date Of Issue matches the value stored in database.</td></tr>
-<tr><td>Provided Religion matches the value stored in database.</td></tr>
-<tr><td>Provided CitizenShip matches the value stored in database.</td></tr>
-<tr><td>Provided Caste matches the value stored in database.</td></tr>
-<tr><td>Provided Domicile matches the value stored in database.</td></tr>
-<tr><td>Provided Community matches the value stored in database.</td></tr>
-<tr><td>Provided Present Address matches the value stored in database.</td></tr>
-<tr><td>Provided Present Address Country matches the value stored in database.</td></tr>
-<tr><td>Provided Present Address City matches the value stored in database.</td></tr>
-<tr><td>User has entered Fathers Name value successfully.</td></tr>
-<tr><td>User has entered Fathers Qualification value successfully.</td></tr>
-<tr><td>User has entered Fathers Occupation value successfully.</td></tr>
-<tr><td>User has entered Fathers Annual Income value successfully.</td></tr>
-<tr><td>User has entered Fathers Email value successfully.</td></tr>
-<tr><td>User has entered Fathers Mobile value successfully.</td></tr>
-<tr><td>User has entered Mothers Name value successfully.</td></tr>
-<tr><td>User has entered Mothers Qualification value successfully.</td></tr>
-<tr><td>User has entered Mothers Occupation value successfully.</td></tr>
 <tr><td>User has entered Mothers Email value successfully.</td></tr>
 <tr><td>User has entered Mothers Mobile value successfully.</td></tr>
 <tr><td>User has entered Guardians Name value successfully.</td></tr>
@@ -71,22 +42,38 @@
 <tr><td>User has entered Guardians Relation value successfully.</td></tr>
 <tr><td>User has entered Guardians Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button on Step 2successfully.</td></tr>
-<tr><td>Provided Fathers Name matches the value stored in database.</td></tr>
-<tr><td>Provided Fathers Qualification matches the value stored in database.</td></tr>
-<tr><td>Provided Fathers Occupation matches the value stored in database.</td></tr>
-<tr><td>Provided Fathers Annual Income matches the value stored in database.</td></tr>
-<tr><td>Provided Fathers Email matches the value stored in database.</td></tr>
-<tr><td>Provided Fathers Mobile matches the value stored in database.</td></tr>
-<tr><td>Provided Mothers Name matches the value stored in database.</td></tr>
-<tr><td>Provided Mothers Qualification matches the value stored in database.</td></tr>
-<tr><td>Provided Mothers Occupation matches the value stored in database.</td></tr>
-<tr><td>Provided Mothers Email matches the value stored in database.</td></tr>
-<tr><td>Provided Mothers Mobile matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Name matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Address 1 matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Address 2 matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Address 3 matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Pincode matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians Relation matches the value stored in database.</td></tr>
-<tr><td>Provided Guardians ContactNumber matches the value stored in database.</td></tr>
+<tr><td>User has entered Course value successfully.</td></tr>
+<tr><td>User has entered SSC School Name value successfully.</td></tr>
+<tr><td>User has entered SSCBoard value successfully.</td></tr>
+<tr><td>User has entered SSC Year of Passing value successfully.</td></tr>
+<tr><td>User has entered SSC Registration Number value successfully.</td></tr>
+<tr><td>User has entered SSC Mode of Study value successfully.</td></tr>
+<tr><td>User has entered SSC Grade/Percentage value successfully.</td></tr>
+<tr><td>User has entered HSC School Name value successfully.</td></tr>
+<tr><td>User has entered HSCBoard value successfully.</td></tr>
+<tr><td>User has entered HSC Mode Of Study value successfully.</td></tr>
+<tr><td>User has entered HSC Year Of Passing value successfully.</td></tr>
+<tr><td>User has entered HSC Percentage/Grade value successfully.</td></tr>
+<tr><td>User has successfully added HSC examination details.</td></tr>
+<tr><td>User has successfully added Entrance examination details.</td></tr>
+<tr><td>User has clicked Grad/Diploma Radio button successfully.</td></tr>
+<tr><td>User has entered Degree Name value successfully.</td></tr>
+<tr><td>User has entered Degree AoS value successfully.</td></tr>
+<tr><td>User has entered Degree College Name value successfully.</td></tr>
+<tr><td>User has entered Degree University Name value successfully.</td></tr>
+<tr><td>User has entered Degree/Diploma Exam Type value successfully.</td></tr>
+<tr><td>User has entered Degree/Diploma YoC value successfully.</td></tr>
+<tr><td>User has entered Degree/Diploma Mode Of Study value successfully.</td></tr>
+<tr><td>User has successfully added Graduation Marks year wise details.</td></tr>
+<tr><td>User has provided Attachement1 successfully.</td></tr>
+<tr><td>User has provided Attachement2 successfully.</td></tr>
+<tr><td>User has provided Attachement3 successfully.</td></tr>
+<tr><td>User has provided Attachement4 successfully.</td></tr>
+<tr><td>User has provided Attachement5 successfully.</td></tr>
+<tr><td>User has provided Attachement5 successfully.</td></tr>
+<tr><td>User has provided Attachement7 successfully.</td></tr>
+<tr><td>User has provided Attachement8 successfully.</td></tr>
+<tr><td>User has provided Attachement9 successfully.</td></tr>
+<tr><td>User has provided Attachement10 successfully.</td></tr>
+<tr><td>User has clicked Next button on Step 3 successfully.</td></tr>
 </table>
