--- a/EE_Web/test-output/old/Suite/classes.html
+++ b/EE_Web/test-output/old/Suite/classes.html
@@ -62,6 +62,44 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>whitefeather.xedge.testcases.DoPaymentInApplicationForm</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickLoginButtonPaytmLoginWindow</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickLoginLinkForPaytmPayment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>providePaytmAccoutUsername</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickRequestOTPButtonForPaytmPayment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>provideLoginOTPReceived</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>whitefeather.xedge.testcases.OpenApplicationFormLandingPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -103,11 +141,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickExpiryDateInputField</td>
+<td>validateNationalityInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateNationalityInStep1</td>
+<td>clickExpiryDateInputField</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -159,11 +197,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideFathersEmail</td>
+<td>provideExpiryDate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideExpiryDate</td>
+<td>provideFathersEmail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -175,11 +213,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideGuardiansAddrPincode</td>
+<td>provideGuardiansName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideGuardiansName</td>
+<td>provideGuardiansAddrPincode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -219,6 +257,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>providePaymentCourse</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>provideSSCModeOfStudy</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -255,11 +297,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideGuardiansAddress1</td>
+<td>validatePlaceOfIssueInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatePlaceOfIssueInStep1</td>
+<td>provideGuardiansAddress1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -275,19 +317,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideAttachment6</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>provideDegreeOrDiplomaType</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideAttachment5</td>
+<td>provideAttachment6</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateGuardianRelationStep2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>provideAttachment5</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -415,11 +457,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideHSCYearOfPassing</td>
+<td>validateLocalGuardianAddr3Step2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLocalGuardianAddr3Step2</td>
+<td>provideHSCYearOfPassing</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -447,11 +489,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateHSCRegNumberStep3</td>
+<td>validateLocalGuardianNameStep2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLocalGuardianNameStep2</td>
+<td>validateHSCRegNumberStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -504,10 +546,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>provideDegreeOrDiplomaUniversityName</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>providePaymentAmount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -571,11 +609,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateFathersNameStep2</td>
+<td>validateDomicileInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateDomicileInStep1</td>
+<td>validateFathersNameStep2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
