--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -33,7 +33,6 @@
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
 <tr><td>User has entered Mothers Email value successfully.</td></tr>
-<tr><td>User has entered Mothers Mobile value successfully.</td></tr>
 <tr><td>User has entered Guardians Name value successfully.</td></tr>
 <tr><td>User has entered Guardians Address 1 value successfully.</td></tr>
 <tr><td>User has entered Guardians Address 2 value successfully.</td></tr>
@@ -54,6 +53,7 @@
 <tr><td>User has entered HSC Mode Of Study value successfully.</td></tr>
 <tr><td>User has entered HSC Year Of Passing value successfully.</td></tr>
 <tr><td>User has entered HSC Percentage/Grade value successfully.</td></tr>
+<tr><td>User has entered HSC Registration Number value successfully.</td></tr>
 <tr><td>User has successfully added HSC examination details.</td></tr>
 <tr><td>User has successfully added Entrance examination details.</td></tr>
 <tr><td>User has clicked Grad/Diploma Radio button successfully.</td></tr>
@@ -76,4 +76,9 @@
 <tr><td>User has provided Attachement9 successfully.</td></tr>
 <tr><td>User has provided Attachement10 successfully.</td></tr>
 <tr><td>User has clicked Next button on Step 3 successfully.</td></tr>
+<tr><td>User has entered Payment Course value successfully.</td></tr>
+<tr><td>User has entered Payment Type value successfully.</td></tr>
+<tr><td>User has clicked Submit button on Step 4 successfully.</td></tr>
+<tr><td>User has clicked Request OTP Button on Login window of Paytm Account successfully.</td></tr>
+<tr><td>User has entered OTP value successfully.</td></tr>
 </table>
