--- a/EE_Web/test-output/old/Suite/classes.html
+++ b/EE_Web/test-output/old/Suite/classes.html
@@ -23,11 +23,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickSubmitButton</td>
+<td>validateLeadEmailAddress</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLeadEmailAddress</td>
+<td>clickSubmitButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -39,11 +39,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLeadMobileNumber</td>
+<td>enterEmailAddress</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>enterEmailAddress</td>
+<td>validateLeadMobileNumber</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -85,7 +85,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateSuccessfulPayment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>provideLoginOTPReceived</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickPayNowButtonPaytmPaymentPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateAmountToBePaid</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -141,11 +153,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateNationalityInStep1</td>
+<td>clickExpiryDateInputField</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickExpiryDateInputField</td>
+<td>validateNationalityInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -157,11 +169,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideMothersName</td>
+<td>provideHSCSchoolName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideHSCSchoolName</td>
+<td>provideMothersName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -197,7 +209,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideExpiryDate</td>
+<td>clickNextButtonStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -205,7 +217,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickNextButtonStep3</td>
+<td>provideExpiryDate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -213,7 +225,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideGuardiansName</td>
+<td>validateHSCModeOfStudyStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -221,7 +233,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateHSCModeOfStudyStep3</td>
+<td>provideGuardiansName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -297,11 +309,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatePlaceOfIssueInStep1</td>
+<td>provideGuardiansAddress1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideGuardiansAddress1</td>
+<td>validatePlaceOfIssueInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -333,7 +345,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateAadhaarNumberInStep1</td>
+<td>validateSSCPercentageStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -341,7 +353,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSSCPercentageStep3</td>
+<td>validateAadhaarNumberInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -349,11 +361,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSSCRegNumberStep3</td>
+<td>validateSSCModeOfStudyStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSSCModeOfStudyStep3</td>
+<td>validateSSCRegNumberStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -361,11 +373,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateDateOfIssueInStep1</td>
+<td>validateSSCBoardStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSSCBoardStep3</td>
+<td>validateDateOfIssueInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -405,11 +417,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateCitizenShipInStep1</td>
+<td>provideHSCRegNumber</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideHSCRegNumber</td>
+<td>validateCitizenShipInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -425,11 +437,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateCommunityInStep1</td>
+<td>provideSSCRegNumber</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideSSCRegNumber</td>
+<td>validateCommunityInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -457,11 +469,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLocalGuardianAddr3Step2</td>
+<td>provideHSCYearOfPassing</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideHSCYearOfPassing</td>
+<td>validateLocalGuardianAddr3Step2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -537,11 +549,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatePassportNumberInStep1</td>
+<td>validateGrdnAddrPincodeStep2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateGrdnAddrPincodeStep2</td>
+<td>validatePassportNumberInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -585,11 +597,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideHSCBoard</td>
+<td>validateCourseStep3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateCourseStep3</td>
+<td>provideHSCBoard</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -609,11 +621,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateDomicileInStep1</td>
+<td>validateFathersNameStep2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateFathersNameStep2</td>
+<td>validateDomicileInStep1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -621,11 +633,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>provideDegreeOrDiplomaAreaOfSpecialization</td>
+<td>validateLocalGuardianAddr2Step2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateLocalGuardianAddr2Step2</td>
+<td>provideDegreeOrDiplomaAreaOfSpecialization</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
