--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -9,18 +9,9 @@
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
 <tr><td>User has provided Date of Birth successfully.</td></tr>
-<tr><td>User has entered PlaceOfBirth value successfully.</td></tr>
 <tr><td>User has entered Gender value successfully.</td></tr>
 <tr><td>User has entered blood group value successfully.</td></tr>
 <tr><td>User has entered Nationality value successfully.</td></tr>
-<tr><td>User has entered Aadhaar Number value successfully.</td></tr>
-<tr><td>User has entered Passport Number value successfully.</td></tr>
-<tr><td>User has entered Place Of Issue value successfully.</td></tr>
-<tr><td>User has opened date of issue calender successfully.</td></tr>
-<tr><td>User has provided Date of Issue successfully.</td></tr>
-<tr><td>User has opened Expiry Date calender successfully.</td></tr>
-<tr><td>User has provided Expiry Date successfully.</td></tr>
-<tr><td>User has entered Religion value successfully.</td></tr>
 <tr><td>User has entered Citizenship value successfully.</td></tr>
 <tr><td>User has entered Caste value successfully.</td></tr>
 <tr><td>User has entered Domicile value successfully.</td></tr>
@@ -29,10 +20,19 @@
 <tr><td>User has entered Country value successfully.</td></tr>
 <tr><td>User has entered State value successfully.</td></tr>
 <tr><td>User has entered City value successfully.</td></tr>
-<tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
+<tr><td>User has entered Fathers Name value successfully.</td></tr>
+<tr><td>User has entered Fathers Qualification value successfully.</td></tr>
+<tr><td>User has entered Fathers Occupation value successfully.</td></tr>
+<tr><td>User has entered Fathers Annual Income value successfully.</td></tr>
+<tr><td>User has entered Fathers Email value successfully.</td></tr>
+<tr><td>User has entered Fathers Mobile value successfully.</td></tr>
+<tr><td>User has entered Mothers Name value successfully.</td></tr>
+<tr><td>User has entered Mothers Qualification value successfully.</td></tr>
+<tr><td>User has entered Mothers Occupation value successfully.</td></tr>
 <tr><td>User has entered Mothers Email value successfully.</td></tr>
+<tr><td>User has entered Mothers Mobile value successfully.</td></tr>
 <tr><td>User has entered Guardians Name value successfully.</td></tr>
 <tr><td>User has entered Guardians Address 1 value successfully.</td></tr>
 <tr><td>User has entered Guardians Address 2 value successfully.</td></tr>
@@ -79,6 +79,12 @@
 <tr><td>User has entered Payment Course value successfully.</td></tr>
 <tr><td>User has entered Payment Type value successfully.</td></tr>
 <tr><td>User has clicked Submit button on Step 4 successfully.</td></tr>
+<tr><td>User has clicked Login Link for Paytm Account successfully.</td></tr>
+<tr><td>User has entered Username value successfully.</td></tr>
 <tr><td>User has clicked Request OTP Button on Login window of Paytm Account successfully.</td></tr>
 <tr><td>User has entered OTP value successfully.</td></tr>
+<tr><td>User has clicked Login Button on Login window of Paytm Account successfully.</td></tr>
+<tr><td>Provided Amount To Be Paid matches the value stored in database.</td></tr>
+<tr><td>User has clicked Pay Now Button on Payment window of Paytm Account successfully.</td></tr>
+<tr><td>All Details diplayed on Successful Payment Message are correct.</td></tr>
 </table>
