--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -9,9 +9,18 @@
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
 <tr><td>User has provided Date of Birth successfully.</td></tr>
+<tr><td>User has entered PlaceOfBirth value successfully.</td></tr>
 <tr><td>User has entered Gender value successfully.</td></tr>
 <tr><td>User has entered blood group value successfully.</td></tr>
 <tr><td>User has entered Nationality value successfully.</td></tr>
+<tr><td>User has entered Aadhaar Number value successfully.</td></tr>
+<tr><td>User has entered Passport Number value successfully.</td></tr>
+<tr><td>User has entered Place Of Issue value successfully.</td></tr>
+<tr><td>User has opened date of issue calender successfully.</td></tr>
+<tr><td>User has provided Date of Issue successfully.</td></tr>
+<tr><td>User has opened Expiry Date calender successfully.</td></tr>
+<tr><td>User has provided Expiry Date successfully.</td></tr>
+<tr><td>User has entered Religion value successfully.</td></tr>
 <tr><td>User has entered Citizenship value successfully.</td></tr>
 <tr><td>User has entered Caste value successfully.</td></tr>
 <tr><td>User has entered Domicile value successfully.</td></tr>
@@ -20,6 +29,13 @@
 <tr><td>User has entered Country value successfully.</td></tr>
 <tr><td>User has entered State value successfully.</td></tr>
 <tr><td>User has entered City value successfully.</td></tr>
+<tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
+<tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
+<tr><td>User has entered Permanent Address value successfully.</td></tr>
+<tr><td>User has entered Country value successfully.</td></tr>
+<tr><td>User has entered State value successfully.</td></tr>
+<tr><td>User has entered City value successfully.</td></tr>
+<tr><td>User has successfully entered Pincode value in Permanent Address section.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
 <tr><td>User has entered Fathers Name value successfully.</td></tr>
