--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -42,13 +42,14 @@
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianAddr2Step2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateExpiryDateInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersEmailStep2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickSameAddressCheckbox</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersQualificationStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCYoPStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersNameStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDomicileInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadEmailAddress</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCBoardStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDateOfIssueInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCBoardStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCModeOfStudyStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateAadhaarNumberInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadDetailsSuccessfulSumbission</td></tr>
