--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,18 +1,18 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
-<tr><td>User has opened correct Application Form page.</td></tr>
 <tr><td>User has entered Full Name successfully.</td></tr>
 <tr><td>User has entered Mobile successfully.</td></tr>
 <tr><td>User has entered Email Address successfully.</td></tr>
 <tr><td>User has entered Entity value successfully.</td></tr>
 <tr><td>User has clicked Submit button successfully.</td></tr>
-<tr><td>User has opened Application Form successfully.</td></tr>
+<tr><td>Provided Lead details are submitted successfully.</td></tr>
+<tr><td>Provided First Name matches the value stored in database.</td></tr>
+<tr><td>Provided Mobile Number matches the value stored in database.</td></tr>
+<tr><td>Provided Email Address matches the value stored in database.</td></tr>
+<tr><td>Provided Entity Value matches the value stored in database.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
 <tr><td>User has provided Date of Birth successfully.</td></tr>
 <tr><td>User has entered PlaceOfBirth value successfully.</td></tr>
-<tr><td>User has entered Gender value successfully.</td></tr>
-<tr><td>User has entered blood group value successfully.</td></tr>
-<tr><td>User has entered Nationality value successfully.</td></tr>
 <tr><td>User has entered Aadhaar Number value successfully.</td></tr>
 <tr><td>User has entered Passport Number value successfully.</td></tr>
 <tr><td>User has entered Place Of Issue value successfully.</td></tr>
@@ -21,7 +21,6 @@
 <tr><td>User has opened Expiry Date calender successfully.</td></tr>
 <tr><td>User has provided Expiry Date successfully.</td></tr>
 <tr><td>User has entered Religion value successfully.</td></tr>
-<tr><td>User has entered Citizenship value successfully.</td></tr>
 <tr><td>User has entered Caste value successfully.</td></tr>
 <tr><td>User has entered Domicile value successfully.</td></tr>
 <tr><td>User has entered Community value successfully.</td></tr>
@@ -38,13 +37,23 @@
 <tr><td>User has successfully entered Pincode value in Permanent Address section.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>User has entered Fathers Name value successfully.</td></tr>
+<tr><td>Provided Aadhaar Number matches the value stored in database.</td></tr>
+<tr><td>Provided Passport Number matches the value stored in database.</td></tr>
+<tr><td>Provided Place Of Issue matches the value stored in database.</td></tr>
+<tr><td>Provided Date Of Issue matches the value stored in database.</td></tr>
+<tr><td>Provided Expiry Date matches the value stored in database.</td></tr>
+<tr><td>Provided Religion matches the value stored in database.</td></tr>
+<tr><td>Provided Caste matches the value stored in database.</td></tr>
+<tr><td>Provided Domicile matches the value stored in database.</td></tr>
+<tr><td>Provided Community matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address Country matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address City matches the value stored in database.</td></tr>
 <tr><td>User has entered Fathers Qualification value successfully.</td></tr>
 <tr><td>User has entered Fathers Occupation value successfully.</td></tr>
 <tr><td>User has entered Fathers Annual Income value successfully.</td></tr>
 <tr><td>User has entered Fathers Email value successfully.</td></tr>
 <tr><td>User has entered Fathers Mobile value successfully.</td></tr>
-<tr><td>User has entered Mothers Name value successfully.</td></tr>
 <tr><td>User has entered Mothers Qualification value successfully.</td></tr>
 <tr><td>User has entered Mothers Occupation value successfully.</td></tr>
 <tr><td>User has entered Mothers Email value successfully.</td></tr>
@@ -57,6 +66,22 @@
 <tr><td>User has entered Guardians Relation value successfully.</td></tr>
 <tr><td>User has entered Guardians Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button on Step 2successfully.</td></tr>
+<tr><td>Provided Fathers Qualification matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Occupation matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Annual Income matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Email matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Mobile matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Qualification matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Occupation matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Email matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Mobile matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Name matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 1 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 2 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 3 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Pincode matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Relation matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians ContactNumber matches the value stored in database.</td></tr>
 <tr><td>User has entered Course value successfully.</td></tr>
 <tr><td>User has entered SSC School Name value successfully.</td></tr>
 <tr><td>User has entered SSCBoard value successfully.</td></tr>
@@ -64,6 +89,7 @@
 <tr><td>User has entered SSC Registration Number value successfully.</td></tr>
 <tr><td>User has entered SSC Mode of Study value successfully.</td></tr>
 <tr><td>User has entered SSC Grade/Percentage value successfully.</td></tr>
+<tr><td>User has clicked HSC Results Out Radio button successfully.</td></tr>
 <tr><td>User has entered HSC School Name value successfully.</td></tr>
 <tr><td>User has entered HSCBoard value successfully.</td></tr>
 <tr><td>User has entered HSC Mode Of Study value successfully.</td></tr>
@@ -72,15 +98,6 @@
 <tr><td>User has entered HSC Registration Number value successfully.</td></tr>
 <tr><td>User has successfully added HSC examination details.</td></tr>
 <tr><td>User has successfully added Entrance examination details.</td></tr>
-<tr><td>User has clicked Grad/Diploma Radio button successfully.</td></tr>
-<tr><td>User has entered Degree Name value successfully.</td></tr>
-<tr><td>User has entered Degree AoS value successfully.</td></tr>
-<tr><td>User has entered Degree College Name value successfully.</td></tr>
-<tr><td>User has entered Degree University Name value successfully.</td></tr>
-<tr><td>User has entered Degree/Diploma Exam Type value successfully.</td></tr>
-<tr><td>User has entered Degree/Diploma YoC value successfully.</td></tr>
-<tr><td>User has entered Degree/Diploma Mode Of Study value successfully.</td></tr>
-<tr><td>User has successfully added Graduation Marks year wise details.</td></tr>
 <tr><td>User has provided Attachement1 successfully.</td></tr>
 <tr><td>User has provided Attachement2 successfully.</td></tr>
 <tr><td>User has provided Attachement3 successfully.</td></tr>
@@ -102,5 +119,4 @@
 <tr><td>User has clicked Login Button on Login window of Paytm Account successfully.</td></tr>
 <tr><td>Provided Amount To Be Paid matches the value stored in database.</td></tr>
 <tr><td>User has clicked Pay Now Button on Payment window of Paytm Account successfully.</td></tr>
-<tr><td>All Details diplayed on Successful Payment Message are correct.</td></tr>
 </table>
